<resources>
    <string name="app_name">Raya Social</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_trader">Trader</string>
    <string name="menu_investment">Investment</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_help">Help</string>
    <string name="menu_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">752367965464719</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb752367965464719</string>
</resources>